Update Hamoye Stage 1 quiz answers.ipynb

--- a/Hamoye Stage 1 quiz answers.ipynb
+++ b/Hamoye Stage 1 quiz answers.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Akande Adeola Anduljelil Submission"
+    "## Akande's Submission"
    ]
   },
   {
