Update Hamoye Stage 1 quiz answers.ipynb

--- a/Hamoye Stage 1 quiz answers.ipynb
+++ b/Hamoye Stage 1 quiz answers.ipynb
@@ -586,9 +586,8 @@
    ],
    "source": [
     "# perentage change in fuel cost per unit burned of 'coal' in 1998 compared to 1995\n",
-    "fuel_df_coal = fuel_df[fuel_df['fuel_type_code_pudl'] == 'coal']\n",
-    "\n",
-    "fuel_df_coal.groupby('report_year')['fuel_cost_per_unit_burned'].sum()"
+    "pd.set_option('display.max_rows', 30000)\n",
+    "fuel_df.groupby(['report_year','fuel_type_code_pudl'])['fuel_cost_per_unit_burned'].sum().round(2).to_frame()"
    ]
   },
   {
